<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_link">https://temp-mail.org/contact/</string>
    <string name="ad_mob_banner_id">ca-app-pub-1004199402074308/3060761199</string>
    <string name="ad_mob_interstitial_id">ca-app-pub-1004199402074308/6723129448</string>
    <string name="ad_mob_rewarded_id">ca-app-pub-1004199402074308/4238111490</string>
    <string name="add_mob_app_key">ca-app-pub-1004199402074308~7746211076</string>
    <string name="add_time_item_sixty_minutes">60 minutes</string>
    <string name="add_time_item_ten_minutes">10 minutes</string>
    <string name="already_subscribed">You already have a subscription. Do you want to restore it?</string>
    <string name="analytics_api_request_failed">api_request_failed</string>
    <string name="analytics_are_you_sure_no">are_you_sure_no</string>
    <string name="analytics_are_you_sure_yes">are_you_sure_yes</string>
    <string name="analytics_email_change_free">email_change_free</string>
    <string name="analytics_email_change_premium">email_change_premium</string>
    <string name="analytics_email_copy_free">email_copy_free</string>
    <string name="analytics_email_copy_premium">email_copy_premium</string>
    <string name="analytics_email_created_premium">email_created_premium</string>
    <string name="analytics_email_deleted_premium">email_deleted_premium</string>
    <string name="analytics_email_edit_free">email_edit_free</string>
    <string name="analytics_email_edit_premium">email_edit_premium</string>
    <string name="analytics_email_read_premium">email_read_premium</string>
    <string name="analytics_email_received_free">email_received_free</string>
    <string name="analytics_email_received_premium">email_received_premium</string>
    <string name="analytics_email_switched_premium">email_switched_premium</string>
    <string name="analytics_error_message">error_message</string>
    <string name="analytics_event_error_cod_str">error_code_str</string>
    <string name="analytics_event_error_code">error_code</string>
    <string name="analytics_event_type_error">error</string>
    <string name="analytics_event_url">url</string>
    <string name="analytics_inbox_refresh_free">inbox_refresh_free</string>
    <string name="analytics_inbox_refresh_premium">inbox_refresh_premium</string>
    <string name="analytics_menu">menu</string>
    <string name="analytics_menu_about_us">menu_about_us</string>
    <string name="analytics_menu_add_email">menu_add_email</string>
    <string name="analytics_menu_feedback">menu_feedback</string>
    <string name="analytics_menu_notifications_off">menu_notifications_off</string>
    <string name="analytics_menu_notifications_on">menu_notifications_on</string>
    <string name="analytics_menu_rate_us">menu_rate_us</string>
    <string name="analytics_menu_restore">menu_restore</string>
    <string name="analytics_menu_upgrade_premium">menu_upgrade_premium</string>
    <string name="analytics_navbar_crown">navbar_crown</string>
    <string name="analytics_premium_payment_failed">premium_payment_failed</string>
    <string name="analytics_premium_price_12m_activated">premium_price_12m_activated</string>
    <string name="analytics_premium_price_12m_click">premium_price_12m_click</string>
    <string name="analytics_premium_price_1m_activated">premium_price_1m_activated</string>
    <string name="analytics_premium_price_1m_click">premium_price_1m_click</string>
    <string name="analytics_premium_price_1w_activated">premium_price_1w_activated</string>
    <string name="analytics_premium_price_1w_click">premium_price_1w_click</string>
    <string name="analytics_premium_price_3m_activated">premium_price_3m_activated</string>
    <string name="analytics_premium_price_3m_click">premium_price_3m_click</string>
    <string name="analytics_premium_price_6m_activated">premium_price_6m_activated</string>
    <string name="analytics_premium_price_6m_click">premium_price_6m_click</string>
    <string name="analytics_premium_price_trial_click">premium_price_trial_click</string>
    <string name="analytics_promo_trial_click">promo_trial_click</string>
    <string name="analytics_qr_code">qr_code</string>
    <string name="analytics_stars_bad">stars_good</string>
    <string name="analytics_stars_good">stars_bad</string>
    <string name="analytics_trial_activated">trial_activated</string>
    <string name="analytics_works_bad">works_bad</string>
    <string name="analytics_works_good">works_good</string>
    <string name="app_name">TempMail</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_permission_denied_tip">We will need CAMERA permission for further work. Please give permission in app settings.</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">2cdbd38c6c234a4fb6e9f631a8907f5d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="help_improve_dialog_question">Send a feedback</string>
    <string name="help_improve_dialog_title">Help us to improve</string>
    <string name="help_improve_sure">Sure</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_dark_mode">Dark mode</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_premium_is_active_android">Premium</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_remove_ads">Remove ads</string>
    <string name="menu_restore_purchases">Restore purchases</string>
    <string name="menu_terms_of_service">Terms of Service</string>
    <string name="menu_web_desktop">Web/Desktop</string>
    <string name="message_you_sure">Are you sure ?</string>
    <string name="rating_dialog_not_now">Not now</string>
    <string name="rating_dialog_question">How would you rate your experience?</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_title">Thanks</string>
    <string name="rewarded_dialog_get_premium">Get Premium</string>
    <string name="rewarded_dialog_watch_video">Watch video</string>
    <string name="switch_address_expired_description">We store up to __0__ expired addresses\10Restore or swipe to delete</string>
    <string name="switch_address_swipe_to_delete">Swipe to delete</string>
    <string name="switch_address_title_expired">Expired</string>
    <string name="tell_dialog_bad">Bad</string>
    <string name="tell_dialog_good">Good</string>
    <string name="tell_dialog_title">Tell us what do you think</string>
    <string name="update_app_dialog_dismiss">Dismiss</string>
    <string name="update_app_dialog_download_new_apk">Download new .apk</string>
    <string name="update_app_dialog_message">Your app version is out of date. Please upgrade to the new version</string>
    <string name="update_app_dialog_title">Update required</string>
    <string name="update_app_dialog_upgrade_play_store">Upgrade in the Play Store</string>
</resources>