<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/constraintContent" android:tag="layout/fragment_update_app_version_dialog_0" android:background="@drawable/rect_white_rounded_borders" android:padding="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
    <TextView android:id="@+id/tvTitle" android:text="@string/update_app_dialog_title" app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/adDialogTitleStyle"/>
    <TextView android:id="@+id/tvMessage" android:text="@string/update_app_dialog_message" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvTitle" style="@style/adDialogTitleMessage"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center" android:id="@+id/tvPlayStore" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/update_app_dialog_upgrade_play_store" android:textAllCaps="false" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvMessage" style="@style/tvDialogButtons.yes"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/tvDownloadApk" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/update_app_dialog_download_new_apk" android:textAllCaps="false" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvPlayStore" style="@style/tvDialogButtons.no"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center" android:id="@+id/tvDismiss" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginBottom="20dp" android:text="@string/update_app_dialog_dismiss" android:textAllCaps="false" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvDownloadApk" style="@style/tvDialogButtons.no"/>
</androidx.constraintlayout.widget.ConstraintLayout>
