<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/constraintMain" android:tag="layout/fragment_rating_dialog_new_0" android:background="@drawable/rect_white_rounded_borders" android:padding="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/tvTitle" android:text="@string/rating_dialog_title" app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/adDialogTitleStyle"/>
    <TextView android:id="@+id/tvSubTitle" android:text="@string/rating_dialog_question" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvTitle" style="@style/adDialogTitleMessage"/>
    <RatingBar android:theme="@style/RatingBar" android:layout_gravity="center" android:id="@+id/ratingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_vertical_margin" android:layout_marginBottom="@dimen/dialog_vertical_margin" android:numStars="5" android:stepSize="1" android:layout_below="@+id/tvSubTitle" android:layout_centerHorizontal="true" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"/>
    <LinearLayout android:id="@+id/llButtonsHorizontal" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/ratingBar" app:layout_constraintVertical_bias="0" style="@style/llButtonsHorizontalStyle">
        <TextView android:id="@+id/tvNo" android:layout_marginRight="8dp" android:text="@string/rating_dialog_not_now" android:layout_marginEnd="8dp" style="@style/tvDialogButtons.no"/>
        <TextView android:id="@+id/tvYes" android:text="@string/help_improve_sure" style="@style/tvDialogButtons.yes"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
