<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/dialog_title_text_size" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/rating_dialog_horizontal_margin" android:layout_marginTop="@dimen/dialog_vertical_margin" android:layout_marginRight="@dimen/rating_dialog_horizontal_margin" android:layout_marginBottom="@dimen/dialog_vertical_margin" android:text="@string/rating_dialog_title" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="@dimen/dialog_text_size" android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_message" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dialog_vertical_margin" android:text="@string/rating_dialog_question" android:layout_below="@+id/tv_title" android:layout_centerHorizontal="true"/>
    <RatingBar android:theme="@style/RatingBar" android:layout_gravity="center" android:id="@+id/rating_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dialog_vertical_margin" android:numStars="5" android:stepSize="1" android:layout_below="@+id/tv_message" android:layout_centerHorizontal="true"/>
    <View android:id="@+id/view_line" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@+id/rating_bar"/>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/dialog_button_padding_left_right" android:paddingRight="@dimen/dialog_button_padding_left_right" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/view_line">
        <TextView android:textSize="@dimen/dialog_button_text_size" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:gravity="center" android:id="@+id/submit" android:paddingTop="@dimen/dialog_button_vertical_margin" android:paddingRight="@dimen/dialog_button_padding_left_right" android:paddingBottom="@dimen/dialog_button_vertical_margin" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/rating_dialog_submit" android:layout_weight="1"/>
        <View android:layout_gravity="center" android:background="@android:color/darker_gray" android:layout_width="1dp" android:layout_height="match_parent"/>
        <TextView android:textSize="@dimen/dialog_button_text_size" android:textColor="@android:color/holo_blue_dark" android:gravity="center" android:id="@+id/cancel" android:paddingLeft="@dimen/dialog_button_padding_left_right" android:paddingTop="@dimen/dialog_button_vertical_margin" android:paddingBottom="@dimen/dialog_button_vertical_margin" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/rating_dialog_not_now" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
