<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/constraintMain" android:tag="layout/fragment_rewarded_ad_dialog_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateTint="@color/colorAccent" android:indeterminateTintMode="src_atop" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?android:attr/progressBarStyleLarge"/>
    <include android:id="@+id/dialogAd" layout="@layout/dialog_ad_layout"/>
    <View android:id="@+id/line" android:background="@color/gray_light" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" app:layout_constraintBottom_toTopOf="@+id/dialogAd"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintContent" android:background="@drawable/rect_white_rounded_borders" android:padding="@dimen/activity_vertical_margin" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/line" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <TextView android:id="@+id/tvTitle" android:text="@string/message_you_sure" app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/adDialogTitleStyle"/>
        <TextView android:id="@+id/tvMessage" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvTitle" style="@style/adDialogTitleMessage"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/llButtonsHorizontal" android:visibility="visible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvMessage">
            <TextView android:id="@+id/tvNo" android:layout_marginRight="8dp" android:text="@string/rewarded_dialog_get_premium" android:layout_marginEnd="8dp" style="@style/tvDialogButtons.no"/>
            <TextView android:id="@+id/tvYes" android:text="@string/rewarded_dialog_watch_video" style="@style/tvDialogButtons.yes"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/llButtonsVertical" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvMessage">
            <TextView android:id="@+id/tvRemoveAds" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/menu_remove_ads" style="@style/tvDialogButtons.no"/>
            <TextView android:id="@+id/tvNoVertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/rewarded_dialog_get_premium" style="@style/tvDialogButtons.no"/>
            <TextView android:id="@+id/tvYesVertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/rewarded_dialog_watch_video" style="@style/tvDialogButtons.yes"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
